Added check-circles and text input for reminders

--- a/src/template.html
+++ b/src/template.html
@@ -10,7 +10,7 @@
 <body>
     <div class="head">
         Today
-        <button class="add-reminder" id="plus">+</button>
+        <button id="plus-button">+</button>
     </div>
     <div id="reminders-list"></div>
 </body>
